Исправляет вложенность, ошибки в консоли, правит отступы

--- a/source/index.html
+++ b/source/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="фитнес центр, кардио-зона, кроссфит, групповые занятия, годовой абонемент" />
-    <meta name="description" content="SUPERGYM — самый большой фитнес центр за Уралом, идеальное место для укрепления тела и здоровья. Тренажерный зал, кардио-зона, групповые занятия.">
-    <title>SUPERGYM — фитнес-центр</title>  
-    <link rel="stylesheet" href="css/style.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="фитнес центр, кардио-зона, кроссфит, групповые занятия, годовой абонемент" />
+  <meta name="description" content="SUPERGYM — самый большой фитнес центр за Уралом, идеальное место для укрепления тела и здоровья. Тренажерный зал, кардио-зона, групповые занятия.">
+  <title>SUPERGYM — фитнес-центр</title>
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>  
+<body>
   <main>
     <div class="hero-wrapper">
       <header class="page-header">
@@ -54,122 +54,120 @@
           <source srcset="img/gym@1x.webp 1x, img/gym@2x.webp 2x" type="image/webp">
           <img src="img/gym@1x.jpg" srcset="img/gym@2x.jpg 2x" width="660" height="401" alt="Изображение тренажерного зала SUPERGYM">
         </picture>
-      </div>      
+      </div>
       <div class="gym__video">
         <picture>
           <source srcset="img/gym-video@1x.webp 1x, img/gym-video@2x.webp 2x" type="image/webp">
           <img src="img/gym-video@1x.jpg" srcset="img/gym-videop@2x.jpg 2x" width="364" height="228" alt="Видео обзор тренажерного зала SUPERGYM">
-        </picture>        
+        </picture>
         <a class="gym__video-play" href="#" aria-label="Смотреть видео обзора тренажерного зала SUPERGYM"></a>
       </div>
     </section>
     <div class="gym-membership-wrapper">
-       <section class="gym-memberships">
-         <div id="gym-memberships__content" class="gym-memberships__content container">
-           <h2>Абонементы</h2>
-           <ul class="gym-memberships__tab-header tab-header">
-             <li class="tab-header__item js-tab-trigger active" data-tab="1">1 месяц</li>
-             <li class="tab-header__item js-tab-trigger" data-tab="2">6 месяцев</li>
-             <li class="tab-header__item js-tab-trigger" data-tab="3">12 месяцев</li>
-           </ul>
-           <ul class="gym-memberships__tab-content tab-content">
-             <li class="tab-content__item js-tab-content active" data-tab="1">
-               <ul class="tab-content__list">
-                 <li>
-                   <h3>С тренером</h3>
-                   <p>12 занятий</p>
-                   <p data-value="5000">5000 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Дневной</h3>
-                   <p>с 8:00 до 17:00</p>
-                   <p data-value="1700">1700 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Полный день</h3>
-                   <p>с 8:00 до 22:00</p>
-                   <p data-value="2700">2700 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
-                 </li>
-               </ul>
-             </li>
-             <li class="tab-content__item js-tab-content" data-tab="2">
-               <ul class="tab-content__list">
-                 <li>
-                   <h3>С тренером</h3>
-                   <p>72 занятия</p>
-                   <p data-value="27000">27000 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Дневной</h3>
-                   <p>с 8:00 до 17:00</p>
-                   <p data-value="1500">1500 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Полный день</h3>
-                   <p>с 8:00 до 22:00</p>
-                   <p data-value="2500">2500 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
-                 </li>
-               </ul>
-             </li>
-             <li class="tab-content__item js-tab-content" data-tab="3">
-               <ul class="tab-content__list">
-                 <li>
-                   <h3>С тренером</h3>
-                   <p>144 занятия</p>
-                   <p data-value="48000">48000 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Дневной</h3>
-                   <p>с 8:00 до 17:00</p>
-                   <p data-value="1300">1300 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
-                 </li>
-                 <li>
-                   <h3>Полный день</h3>
-                   <p>с 8:00 до 22:00</p>
-                   <p data-value="2300">2300 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
-                 </li>
-               </ul>
-             </li>
-           </ul>
-         </div>
-       </section>
-       <section class="competition">
-         <div class="competition__content container">
-           <h2 class="visually-hidden">Ежегодные соревнования по кроссфиту</h2>
-           <div class="competition__promo  promo">
-             <div class="promo__info">
-               <h3>Super Games</h3>
-               <table class="promo-schedule">
-                 <tbody>
-                   <tr>
-                     <td>Дата</td>
-                     <td>
-                       <span>7</span>
-                       <span>Марта 2019</span>
-                     </td>
-                   </tr>
-                   <tr>
-                     <td>Время</td>
-                     <td>12:00</td>
-                   </tr>
-                 </tbody>
-               </table>
-               <p>Ежегодные соревнования по <span>CrossFit</span></p>
-               <a class="promo__link  cta-btn" href="">Заполнить заявку</a>
-             </div>
-           </div>
-         </div>
-       </section>
-    </div>   
+      <section class="gym-memberships">
+        <div id="gym-memberships__content" class="gym-memberships__content container">
+          <h2>Абонементы</h2>
+          <ul class="gym-memberships__tab-header tab-header">
+            <li>
+              <button class="tab-header__button active"><span>1 месяц</span></button>
+            </li>
+            <li>
+              <button class="tab-header__button"><span>6 месяцев</span></button>
+            </li>
+            <li>
+              <button class="tab-header__button"><span>12 месяцев</span></button>
+            </li>
+          </ul>
+          <ul class="gym-memberships__tab-content tab-content">
+            <li class="tab-content__item">
+              <h3>С тренером</h3>
+              <p>12 занятий</p>
+              <p data-value="5000">5000 <span>&#8381;</span></p>
+              <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Дневной</h3>
+              <p>с 8:00 до 17:00</p>
+              <p data-value="1700">1700 <span>&#8381;</span></p>
+              <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Полный день</h3>
+              <p>с 8:00 до 22:00</p>
+              <p data-value="2700">2700 <span>&#8381;</span></p>
+              <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
+            </li>
+          </ul>
+          <ul class="gym-memberships__tab-content tab-content hidden">
+            <li class="tab-content__item">
+              <h3>С тренером</h3>
+              <p>72 занятия</p>
+              <p data-value="27000">27000 <span>&#8381;</span></p>
+              <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Дневной</h3>
+              <p>с 8:00 до 17:00</p>
+              <p data-value="1500">1500 <span>&#8381;</span></p>
+              <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Полный день</h3>
+              <p>с 8:00 до 22:00</p>
+              <p data-value="2500">2500 <span>&#8381;</span></p>
+              <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
+            </li>
+          </ul>
+          <ul class="gym-memberships__tab-content tab-content hidden">
+            <li class="tab-content__item">
+              <h3>С тренером</h3>
+              <p>144 занятия</p>
+              <p data-value="48000">48000 <span>&#8381;</span></p>
+              <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Дневной</h3>
+              <p>с 8:00 до 17:00</p>
+              <p data-value="1300">1300 <span>&#8381;</span></p>
+              <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
+            </li>
+            <li class="tab-content__item">
+              <h3>Полный день</h3>
+              <p>с 8:00 до 22:00</p>
+              <p data-value="2300">2300 <span>&#8381;</span></p>
+              <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="competition">
+        <div class="competition__content container">
+          <h2 class="visually-hidden">Ежегодные соревнования по кроссфиту</h2>
+          <div class="competition__promo  promo">
+            <div class="promo__info">
+              <h3>Super Games</h3>
+              <table class="promo-schedule">
+                <tbody>
+                  <tr>
+                    <td>Дата</td>
+                    <td>
+                      <span>7</span>
+                      <span>Марта 2019</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Время</td>
+                    <td>12:00</td>
+                  </tr>
+                </tbody>
+              </table>
+              <p>Ежегодные соревнования по <span>CrossFit</span></p>
+              <a class="promo__link  cta-btn" href="">Заполнить заявку</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <section class="coaches-slider">
       <div class="coaches-slider__content  container">
         <h2>Тренеры</h2>
@@ -197,7 +195,7 @@
                         alt="Фотография тренера Анны Павловой">
                     </picture>
                   </div>
-                </div>                
+                </div>
               </li>
               <li class="coaches-slider__item">
                 <div class="coach">
@@ -219,7 +217,7 @@
                       alt="Фотография тренера Алексея Лаврова">
                   </picture>
                 </div>
-                </div>                
+                </div>
               </li>
               <li class="coaches-slider__item">
                 <div class="coach">
@@ -241,7 +239,7 @@
                       alt="Фотография тренера Александра Пашкова">
                   </picture>
                 </div>
-                </div>                
+                </div>
               </li>
               <li class="coaches-slider__item">
                 <div class="coach">
@@ -263,7 +261,7 @@
                       alt="Фотография тренера Марии Кетовой">
                   </picture>
                 </div>
-                </div>                
+                </div>
               </li>
               <li class="coaches-slider__item">
                 <div class="coach">
@@ -352,7 +350,7 @@
                     </picture>
                   </div>
                 </div>
-              </li>              
+              </li>
             </ul>
           </div>
           <button class="coaches-slider__button  coaches-slider__button--next" type="button" aria-label="Вперёд"></button>
@@ -370,7 +368,7 @@
             </p>
             <p>Современные тренажеры на все группы мышц</p>
           </li>
-          <li class="advantage-item">
+          <li class="advantage-item advantage-item--space">
             <p>
               <span>900</span>
               <span>кв/м</span>
@@ -380,7 +378,7 @@
               <p>Занимайтесь без очередей и&nbsp;толкучки</p>
             </div>
           </li>
-          <li class="advantage-item">
+          <li class="advantage-item advantage-item--parking">
             <p>
               <span>70</span>
               <span>машин</span>
@@ -400,7 +398,7 @@
               <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
             </div>
           </li>
-          <li class="advantage-item">
+          <li class="advantage-item advantage-item--experience">
             <p>
               <span>5+</span>
               <span>лет</span>
@@ -418,10 +416,10 @@
         <h2>Акции</h2>
         <div class="promotions__info">
           <div class="promotions__main">
-           <h3>
+            <h3>
             <span>Год</span>
             <span>4999</span>
-           </h3>
+            </h3>
             <p>Безлимитный абонемент в тренажерный зал</p>
             <a class="promotions__link" href="#">Подробнее</a>
           </div>
@@ -454,8 +452,7 @@
               </li>
               <li class="comment-slider__item">
                 <h3>Анна Орлова</h3>
-                <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
-                  дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
               </li>
             </ul>
           </div>
@@ -468,7 +465,7 @@
         <div class="promo-lesson__content">
           <h2>Бесплатное занятие</h2>
           <form action="#" method="POST">
-            <div class="form-input">              
+            <div class="form-input">
               <label class="visually-hidden" for="name">Имя</label>
               <input type="text" name="name" id="name" placeholder="Имя" autocomplete="off" required>
               <label class="visually-hidden" for="phone">Телефон</label>
@@ -521,6 +518,6 @@
     </div>
   </footer>
   <script src="js/vendor.js"></script>
-  <script src="js/main.js"></script>        
+  <script src="js/main.js"></script>
 </body>
 </html>
